Linked javascript and HTML file so output is displayed on webpage

--- a/src/Notification.html
+++ b/src/Notification.html
@@ -5,10 +5,16 @@
   <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-
-<div class="alert-box error"><span>error: </span>Write your error message here.</div>
+ 
+ <div id="div1"></div>
+<!--<div class="alert-box error"><span>error: </span>Write your error message here.</div>
 <div class="alert-box success"><span>success: </span>Write your success message here.</div>
 <div class="alert-box warning"><span>warning: </span>Write your warning message here.</div>
-<div class="alert-box notice"><span>notice: </span>Write your notice message here.</div>
+<div class="alert-box notice"><span>notice: </span>Write your notice message here.</div>-->
+
+<script type="text/javascript" src="notification.js"></script>
 	
+<script>
+printNotifications();
+</script>
 </body>
