--- a/src/Notification.html
+++ b/src/Notification.html
@@ -198,7 +198,7 @@
 
 function timeSince(dateIn) {
 
-	var date = new Date(dateIn);
+  var date = new Date(dateIn);
 
   var seconds = Math.floor((new Date() - date) / 1000);
 
@@ -229,10 +229,48 @@ function timeSince(dateIn) {
 
 
 <script>
-var app = angular.module("notificationsList", []); 
+var app = angular.module("notificationsList", []);
+
+
+app.filter('formatDate', function () {
+   return function (input) {
+	   var date = new Date(input);
+
+	  var seconds = Math.floor((new Date() - date) / 1000);
+
+	  var interval = Math.floor(seconds / 31536000);
+
+	  if (interval > 1) {
+		return interval + " years ago";
+	  }
+	  interval = Math.floor(seconds / 2592000);
+	  if (interval > 1) {
+		return interval + " months ago";
+	  }
+	  interval = Math.floor(seconds / 86400);
+	  if (interval > 1) {
+		return interval + " days ago";
+	  }
+	  interval = Math.floor(seconds / 3600);
+	  if (interval > 1) {
+		return interval + " hours ago";
+	  }
+	  interval = Math.floor(seconds / 60);
+	  if (interval > 1) {
+		return interval + " minutes ago";
+	  }
+	  return Math.floor(seconds) + " seconds ago";
+   }
+});
+
+
+ 
 app.controller("myCtrl", function($scope) {
     $scope.data = angular.fromJson(json);
+	$scope.timeSince = timeSince;
 });
+
+
 </script>
 
 <div ng-app="notificationsList" ng-controller="myCtrl">
@@ -240,19 +278,18 @@ app.controller("myCtrl", function($scope) {
 
 
 <div ng-repeat="x in data">
-
 	<div class="alert-box error" ng-switch on="x.type">
 		<div ng-switch-when="message">
-			<span>{{x.type}} </span>{{x.data.from_name}} messaged you in {{x.data.subject}}
+			<span>{{x.created_at|formatDate}} </span>{{x.data.from_name}} messaged you in {{x.data.subject}}
 		</div>
 		<div ng-switch-when="forum">
-			<span>{{x.type}} </span>{{x.data.from_name}} replied to you in {{x.data.subject}}
+			<span>{{x.created_at|formatDate}} </span>{{x.data.from_name}} replied to you in {{x.data.subject}}
 		</div>		
 		<div ng-switch-when="gallery">
-			<span>{{x.type}} </span>{{x.data.user_name}} uploaded new file to gallery {{x.data.gallery_title}}
+			<span>{{x.created_at|formatDate}} </span>{{x.data.user_name}} uploaded new file to gallery {{x.data.gallery_title}}
 		</div>
 		<div ng-switch-when="file">
-			<span>{{x.type}} </span>{{x.data.user_name}} uploaded new file {{x.data.filename }} to {{x.data.module_name}}
+			<span>{{x.created_at|formatDate}} </span>{{x.data.user_name}} uploaded new file {{x.data.filename }} to {{x.data.module_name}}
 		</div>		
 	</div>
 </div>
