--- a/src/Notification.html
+++ b/src/Notification.html
@@ -2,6 +2,7 @@
 <html>
 	<title>Notification</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+	<script src="timeago.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="styles/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 <body>
@@ -207,40 +208,17 @@ var app = angular.module("notificationsList", []);
 
 app.filter('formatDate', function () {<!-- format time to days/hour/minutes etc since post-->
    return function (input) {
-	   var date = new Date(input);
-
-	  var seconds = Math.floor((new Date() - date) / 1000);
-
-	  var interval = Math.floor(seconds / 31536000);
-
-	  if (interval > 1) {
-		return interval + " years ago";
-	  }
-	  interval = Math.floor(seconds / 2592000);
-	  if (interval > 1) {
-		return interval + " months ago";
-	  }
-	  interval = Math.floor(seconds / 86400);
-	  if (interval > 1) {
-		return interval + " days ago";
-	  }
-	  interval = Math.floor(seconds / 3600);
-	  if (interval > 1) {
-		return interval + " hours ago";
-	  }
-	  interval = Math.floor(seconds / 60);
-	  if (interval > 1) {
-		return interval + " minutes ago";
-	  }
-	  return Math.floor(seconds) + " seconds ago";
+	   var date = timeago().format(new Date(input));
+	  return date;
    }
 });
 
 
  
-app.controller("myCtrl", function($scope) {
+app.controller("myCtrl", function($scope, $http) {
     $scope.data = angular.fromJson(json);
 });
+
 
 
 </script>
